--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
   }
 
   .logo::before {
-    content: '🧠';
+    content: '\f544'; /* Font Awesome brain icon */
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
     font-size: 2rem;
     margin-right: 15px;
     filter: drop-shadow(0 0 5px var(--ai-glow));
@@ -350,6 +352,7 @@
   }
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head><body>
   <div class="container">
     <div class="logo-container">
@@ -361,72 +364,72 @@
       <div class="category">
         <h2 class="category-title">搜索引擎</h2>
         <div class="nav-grid">
-          <a href="https://www.google.com" class="nav-item"><span><i class="nav-item-icon">🔍</i>Google</span></a>
-          <a href="https://www.bing.com" class="nav-item"><span><i class="nav-item-icon">🔎</i>Bing</span></a>
-          <a href="https://www.baidu.com" class="nav-item"><span><i class="nav-item-icon">🐾</i>百度</span></a>
-          <a href="https://duckduckgo.com" class="nav-item"><span><i class="nav-item-icon">🦆</i>DuckDuckGo</span></a>
-          <a href="https://www.ecosia.org" class="nav-item"><span><i class="nav-item-icon">🌳</i>Ecosia</span></a>
-          <a href="https://yandex.com" class="nav-item"><span><i class="nav-item-icon">🌐</i>Yandex</span></a>
+          <a href="https://www.google.com" class="nav-item"><span><i class="nav-item-icon fas fa-search"></i>Google</span></a>
+          <a href="https://www.bing.com" class="nav-item"><span><i class="nav-item-icon fas fa-search"></i>Bing</span></a>
+          <a href="https://www.baidu.com" class="nav-item"><span><i class="nav-item-icon fas fa-paw"></i>百度</span></a>
+          <a href="https://duckduckgo.com" class="nav-item"><span><i class="nav-item-icon fas fa-kiwi-bird"></i>DuckDuckGo</span></a>
+          <a href="https://www.ecosia.org" class="nav-item"><span><i class="nav-item-icon fas fa-tree"></i>Ecosia</span></a>
+          <a href="https://yandex.com" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>Yandex</span></a>
         </div>
       </div>
 
       <div class="category">
         <h2 class="category-title">社交媒体</h2>
         <div class="nav-grid">
-          <a href="https://www.facebook.com" class="nav-item"><span><i class="nav-item-icon">👥</i>Facebook</span></a>
-          <a href="https://twitter.com" class="nav-item"><span><i class="nav-item-icon">🐦</i>Twitter</span></a>
-          <a href="https://www.instagram.com" class="nav-item"><span><i class="nav-item-icon">📷</i>Instagram</span></a>
-          <a href="https://www.linkedin.com" class="nav-item"><span><i class="nav-item-icon">💼</i>LinkedIn</span></a>
-          <a href="https://www.tiktok.com" class="nav-item"><span><i class="nav-item-icon">🎵</i>TikTok</span></a>
-          <a href="https://www.reddit.com" class="nav-item"><span><i class="nav-item-icon">👽</i>Reddit</span></a>
+          <a href="https://www.facebook.com" class="nav-item"><span><i class="nav-item-icon fab fa-facebook-f"></i>Facebook</span></a>
+          <a href="https://twitter.com" class="nav-item"><span><i class="nav-item-icon fab fa-twitter"></i>Twitter</span></a>
+          <a href="https://www.instagram.com" class="nav-item"><span><i class="nav-item-icon fab fa-instagram"></i>Instagram</span></a>
+          <a href="https://www.linkedin.com" class="nav-item"><span><i class="nav-item-icon fab fa-linkedin-in"></i>LinkedIn</span></a>
+          <a href="https://www.tiktok.com" class="nav-item"><span><i class="nav-item-icon fab fa-tiktok"></i>TikTok</span></a>
+          <a href="https://www.reddit.com" class="nav-item"><span><i class="nav-item-icon fab fa-reddit-alien"></i>Reddit</span></a>
         </div>
       </div>
 
       <div class="category">
         <h2 class="category-title">实用工具</h2>
         <div class="nav-grid">
-          <a href="https://translate.google.com" class="nav-item"><span><i class="nav-item-icon">🌍</i>Google翻译</span></a>
-          <a href="https://www.wolframalpha.com" class="nav-item"><span><i class="nav-item-icon">🧮</i>Wolfram Alpha</span></a>
-          <a href="https://www.calculator.net" class="nav-item"><span><i class="nav-item-icon">🖩</i>在线计算器</span></a>
-          <a href="https://www.speedtest.net" class="nav-item"><span><i class="nav-item-icon">⚡</i>网速测试</span></a>
-          <a href="https://www.timeanddate.com" class="nav-item"><span><i class="nav-item-icon">🕰️</i>时间日期</span></a>
-          <a href="https://www.wikihow.com" class="nav-item"><span><i class="nav-item-icon">📚</i>WikiHow</span></a>
+          <a href="https://translate.google.com" class="nav-item"><span><i class="nav-item-icon fas fa-language"></i>Google翻译</span></a>
+          <a href="https://www.wolframalpha.com" class="nav-item"><span><i class="nav-item-icon fas fa-calculator"></i>Wolfram Alpha</span></a>
+          <a href="https://www.calculator.net" class="nav-item"><span><i class="nav-item-icon fas fa-calculator"></i>在线计算器</span></a>
+          <a href="https://www.speedtest.net" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>网速测试</span></a>
+          <a href="https://www.timeanddate.com" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>时间日期</span></a>
+          <a href="https://www.wikihow.com" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>WikiHow</span></a>
         </div>
       </div>
 
       <div class="category">
         <h2 class="category-title">科技资讯</h2>
         <div class="nav-grid">
-          <a href="https://www.techcrunch.com" class="nav-item"><span><i class="nav-item-icon">💻</i>TechCrunch</span></a>
-          <a href="https://www.wired.com" class="nav-item"><span><i class="nav-item-icon">🔌</i>Wired</span></a>
-          <a href="https://www.theverge.com" class="nav-item"><span><i class="nav-item-icon">📱</i>The Verge</span></a>
-          <a href="https://arstechnica.com" class="nav-item"><span><i class="nav-item-icon">🔬</i>Ars Technica</span></a>
-          <a href="https://www.engadget.com" class="nav-item"><span><i class="nav-item-icon">🎮</i>Engadget</span></a>
-          <a href="https://techradar.com" class="nav-item"><span><i class="nav-item-icon">📡</i>TechRadar</span></a>
+          <a href="https://www.techcrunch.com" class="nav-item"><span><i class="nav-item-icon fas fa-microchip"></i>TechCrunch</span></a>
+          <a href="https://www.wired.com" class="nav-item"><span><i class="nav-item-icon fas fa-plug"></i>Wired</span></a>
+          <a href="https://www.theverge.com" class="nav-item"><span><i class="nav-item-icon fas fa-mobile-alt"></i>The Verge</span></a>
+          <a href="https://arstechnica.com" class="nav-item"><span><i class="nav-item-icon fas fa-flask"></i>Ars Technica</span></a>
+          <a href="https://www.engadget.com" class="nav-item"><span><i class="nav-item-icon fas fa-gamepad"></i>Engadget</span></a>
+          <a href="https://techradar.com" class="nav-item"><span><i class="nav-item-icon fas fa-satellite-dish"></i>TechRadar</span></a>
         </div>
       </div>
 
       <div class="category">
         <h2 class="category-title">云存储</h2>
         <div class="nav-grid">
-          <a href="https://www.dropbox.com" class="nav-item"><span><i class="nav-item-icon">📦</i>Dropbox</span></a>
-          <a href="https://drive.google.com" class="nav-item"><span><i class="nav-item-icon">📁</i>Google Drive</span></a>
-          <a href="https://onedrive.live.com" class="nav-item"><span><i class="nav-item-icon">☁️</i>OneDrive</span></a>
-          <a href="https://www.box.com" class="nav-item"><span><i class="nav-item-icon">📂</i>Box</span></a>
-          <a href="https://www.mediafire.com" class="nav-item"><span><i class="nav-item-icon">🔥</i>MediaFire</span></a>
-          <a href="https://mega.nz" class="nav-item"><span><i class="nav-item-icon">🔐</i>MEGA</span></a>
+          <a href="https://www.dropbox.com" class="nav-item"><span><i class="nav-item-icon fab fa-dropbox"></i>Dropbox</span></a>
+          <a href="https://drive.google.com" class="nav-item"><span><i class="nav-item-icon fab fa-google-drive"></i>Google Drive</span></a>
+          <a href="https://onedrive.live.com" class="nav-item"><span><i class="nav-item-icon fas fa-cloud"></i>OneDrive</span></a>
+          <a href="https://www.box.com" class="nav-item"><span><i class="nav-item-icon fas fa-box"></i>Box</span></a>
+          <a href="https://www.mediafire.com" class="nav-item"><span><i class="nav-item-icon fas fa-fire"></i>MediaFire</span></a>
+          <a href="https://mega.nz" class="nav-item"><span><i class="nav-item-icon fas fa-lock"></i>MEGA</span></a>
         </div>
       </div>
 
       <div class="category">
         <h2 class="category-title">电子邮箱</h2>
         <div class="nav-grid">
-          <a href="https://mail.google.com" class="nav-item"><span><i class="nav-item-icon">📧</i>Gmail</span></a>
-          <a href="https://outlook.live.com" class="nav-item"><span><i class="nav-item-icon">📨</i>Outlook</span></a>
-          <a href="https://mail.yahoo.com" class="nav-item"><span><i class="nav-item-icon">📬</i>Yahoo Mail</span></a>
-          <a href="https://www.zoho.com/mail" class="nav-item"><span><i class="nav-item-icon">📪</i>Zoho Mail</span></a>
-          <a href="https://www.protonmail.com" class="nav-item"><span><i class="nav-item-icon">🔒</i>ProtonMail</span></a>
-          <a href="https://mail.qq.com" class="nav-item"><span><i class="nav-item-icon">🐧</i>QQ邮箱</span></a>
+          <a href="https://mail.google.com" class="nav-item"><span><i class="nav-item-icon fas fa-envelope"></i>Gmail</span></a>
+          <a href="https://outlook.live.com" class="nav-item"><span><i class="nav-item-icon fas fa-envelope-open"></i>Outlook</span></a>
+          <a href="https://mail.yahoo.com" class="nav-item"><span><i class="nav-item-icon fas fa-envelope-square"></i>Yahoo Mail</span></a>
+          <a href="https://www.zoho.com/mail" class="nav-item"><span><i class="nav-item-icon fas fa-at"></i>Zoho Mail</span></a>
+          <a href="https://www.protonmail.com" class="nav-item"><span><i class="nav-item-icon fas fa-shield-alt"></i>ProtonMail</span></a>
+          <a href="https://mail.qq.com" class="nav-item"><span><i class="nav-item-icon fas fa-dove"></i>QQ邮箱</span></a>
         </div>
       </div>
     </div>
