--- a/index.html
+++ b/index.html
@@ -370,10 +370,10 @@
         <div class="nav-grid">
           <a href="https://www.google.com" class="nav-item"><span><i class="nav-item-icon fas fa-search"></i>Google</span></a>
           <a href="https://www.bing.com" class="nav-item"><span><i class="nav-item-icon fas fa-search"></i>Bing</span></a>
-          <a href="https://www.baidu.com" class="nav-item"><span><i class="nav-item-icon fas fa-paw"></i>百度</span></a>
-          <a href="https://duckduckgo.com" class="nav-item"><span><i class="nav-item-icon fas fa-duck"></i>DuckDuckGo</span></a>
-          <a href="https://www.ecosia.org" class="nav-item"><span><i class="nav-item-icon fas fa-tree"></i>Ecosia</span></a>
-          <a href="https://yandex.com" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>Yandex</span></a>
+          <a href="https://websim.ai/" class="nav-item"><span><i class="nav-item-icon fas fa-paw"></i>websim</span></a>
+          <a href="https://chatgpt.com/" class="nav-item"><span><i class="nav-item-icon fas fa-duck"></i>chatgpt</span></a>
+          <a href="https://www.doubao.com/chat/" class="nav-item"><span><i class="nav-item-icon fas fa-tree"></i>傻豆包</span></a>
+          <a href="https://yuanbao.tencent.com" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>傻元宝</span></a>
         </div>
       </div>
 
