--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
           <a href="https://www.google.com" class="nav-item"><span><i class="nav-item-icon fas fa-search"></i>Google</span></a>
           <a href="https://www.bing.com" class="nav-item"><span><i class="nav-item-icon fas fa-search"></i>Bing</span></a>
           <a href="https://websim.ai/" class="nav-item"><span><i class="nav-item-icon fas fa-paw"></i>websim</span></a>
-          <a href="https://chatgpt.com/" class="nav-item"><span><i class="nav-item-icon fas fa-chat"></i>chatgpt</span></a>
+          <a href="https://chatgpt.com/" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>chatgpt</span></a>
           <a href="https://www.doubao.com/chat/" class="nav-item"><span><i class="nav-item-icon fas fa-tree"></i>傻豆包</span></a>
           <a href="https://yuanbao.tencent.com" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>傻元宝</span></a>
         </div>
