--- a/index.html
+++ b/index.html
@@ -393,11 +393,11 @@
         <h2 class="category-title">实用工具</h2>
         <div class="nav-grid">
           <a href="https://translate.google.com" class="nav-item"><span><i class="nav-item-icon fas fa-language"></i>Google翻译</span></a>
-          <a href="https://www.wolframalpha.com" class="nav-item"><span><i class="nav-item-icon fas fa-square-root-alt"></i>Wolfram Alpha</span></a>
-          <a href="https://www.calculator.net" class="nav-item"><span><i class="nav-item-icon fas fa-calculator"></i>在线计算器</span></a>
-          <a href="https://www.speedtest.net" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>网速测试</span></a>
-          <a href="https://www.timeanddate.com" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>时间日期</span></a>
-          <a href="https://www.wikihow.com" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>WikiHow</span></a>
+          <a href="https://d.186404.xyz/" class="nav-item"><span><i class="nav-item-icon fas fa-square-root-alt"></i></短链</span></a>
+          <a href="https://www.calculator.net" class="nav-item"><span><i class="nav-item-icon fas fa-calculator"></i>dynv6</span></a>
+          <a href="https://fast.com/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>网速测试</span></a>
+          <a href="https://www.cloudns.net/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>cloudns</span></a>
+          <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>cloudflare</span></a>
         </div>
       </div>
 
