--- a/index.html
+++ b/index.html
@@ -404,6 +404,10 @@
           <a href="https://www.cloudns.net/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>cloudns</span></a>
           <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>cloudflare</span></a>
           <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>cloudflare</span></a>
+            <a href="https://fast.com/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>网速测试</span></a>
+          <a href="https://www.cloudns.net/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>cloudns</span></a>
+          <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>cloudflare</span></a>
+          <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>cloudflare</span></a>
         </div>
       </div>
 
