--- a/index.html
+++ b/index.html
@@ -394,20 +394,20 @@
         <div class="nav-grid">
           <a href="https://translate.google.com" class="nav-item"><span><i class="nav-item-icon fas fa-language"></i>Google翻译</span></a>
           <a href="https://d.186404.xyz/" class="nav-item"><span><i class="nav-item-icon fas fa-square-root-alt"></i><短链</span></a>
-          <a href="https://www.calculator.net" class="nav-item"><span><i class="nav-item-icon fas fa-calculator"></i>dynv6</span></a>
+          <a href="https://dynv6.com/" class="nav-item"><span><i class="nav-item-icon fas fa-calculator"></i>dynv6</span></a>
           <a href="https://fast.com/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>网速测试</span></a>
           <a href="https://www.cloudns.net/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>cloudns</span></a>
           <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>cloudflare</span></a>
           <a href="https://ygpy.net/" class="nav-item"><span><i class="nav-item-icon fas fa-square-root-alt"></i><一个朋友</span></a>
-          <a href="https://www.calculator.net" class="nav-item"><span><i class="nav-item-icon fas fa-calculator"></i>dynv6</span></a>
-          <a href="https://fast.com/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>网速测试</span></a>
-          <a href="https://www.cloudns.net/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>cloudns</span></a>
-          <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>cloudflare</span></a>
-          <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>cloudflare</span></a>
-            <a href="https://fast.com/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>网速测试</span></a>
-          <a href="https://www.cloudns.net/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>cloudns</span></a>
-          <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>cloudflare</span></a>
-          <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>cloudflare</span></a>
+          <a href="https://notebooklm.google/" class="nav-item"><span><i class"nav-item-icon fas fa-calculator"></i>谷歌笔记</span></a>
+          <a href="https://email.ml/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>临时邮箱</span></a>
+          <a href="https://www.ahhhhfs.com/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>ahhhhfs</span></a>
+          <a href="https://ip.sb/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>ip查询</span></a>
+          <a hr="https://img.186404.xyz/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>图床</span></a>
+          <a href="https://www.site.ac/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>site域名转发</span></a>
+          <a href="https://zh.go-to-library.sk/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>Z-Library</span></a>
+          <a href="https://nic.us.kg/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>us.kg域名</span></a>
+          <a href="https://www.spaceship.com/zh/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>spaceship廉价域名</span></a>
         </div>
       </div>
 
