--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     
     <div class="categories-container">
       <div class="category">
-        <h2 class="category-title">搜索引擎</h2>
+        <h2 class="category-title">Ai搜索</h2>
         <div class="nav-grid">
           <a href="https://www.google.com" class="nav-item"><span><i class="nav-item-icon fas fa-search"></i>Google</span></a>
           <a href="https://www.bing.com" class="nav-item"><span><i class="nav-item-icon fas fa-search"></i>Bing</span></a>
@@ -374,6 +374,8 @@
           <a href="https://chatgpt.com/" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>chatgpt</span></a>
           <a href="https://www.doubao.com/chat/" class="nav-item"><span><i class="nav-item-icon fas fa-tree"></i>傻豆包</span></a>
           <a href="https://yuanbao.tencent.com" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>傻元宝</span></a>
+          <a href="https://poe.com/" class="nav-item"><span><i class="nav-item-icon fas fa-tree"></i>poe</span></a>
+          <a href="https://claude.ai/" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>claude</span></a>
         </div>
       </div>
 
