--- a/index.html
+++ b/index.html
@@ -422,6 +422,8 @@
           <a href="https://arstechnica.com" class="nav-item"><span><i class="nav-item-icon fas fa-flask"></i>Ars Technica</span></a>
           <a href="https://www.engadget.com" class="nav-item"><span><i class="nav-item-icon fas fa-gamepad"></i>Engadget</span></a>
           <a href="https://techradar.com" class="nav-item"><span><i class="nav-item-icon fas fa-satellite-dish"></i>TechRadar</span></a>
+          <a href="https://b.186404.xyz/" class="nav-item"><span><i class="nav-item-icon fas fa-microchip"></i>科技博客</span></a>
+          <a href="https://www.cnbeta.com.tw/" class="nav-item"><span><i class="nav-item-icon fas fa-plug"></i>cnbeta</span></a>
         </div>
       </div>
 
