--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@
           <a href="https://www.linkedin.com" class="nav-item"><span><i class="nav-item-icon fab fa-linkedin-in"></i>LinkedIn</span></a>
           <a href="https://www.tiktok.com" class="nav-item"><span><i class="nav-item-icon fab fa-tiktok"></i>TikTok</span></a>
           <a href="https://www.reddit.com" class="nav-item"><span><i class="nav-item-icon fab fa-reddit-alien"></i>Reddit</span></a>
+          <a href="https://github.com/" class="nav-item"><span><i class="nav-item-icon fab fa-github"></i>Reddit</span></a>
         </div>
       </div>
 
