--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
           <a href="https://www.doubao.com/chat/" class="nav-item"><span><i class="nav-item-icon fas fa-tree"></i>傻豆包</span></a>
           <a href="https://yuanbao.tencent.com" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>傻元宝</span></a>
           <a href="https://poe.com/" class="nav-item"><span><i class="nav-item-icon fas fa-tree"></i>poe</span></a>
-          <a href="https://claude.ai/" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>claude</span></a>
+          <a href="https://claude.ai/" class="nav-item"><span><i class="nav-item-icon fas fa-claude"></i>claude</span></a>
         </div>
       </div>
 
@@ -388,7 +388,7 @@
           <a href="https://www.linkedin.com" class="nav-item"><span><i class="nav-item-icon fab fa-linkedin-in"></i>LinkedIn</span></a>
           <a href="https://www.tiktok.com" class="nav-item"><span><i class="nav-item-icon fab fa-tiktok"></i>TikTok</span></a>
           <a href="https://www.reddit.com" class="nav-item"><span><i class="nav-item-icon fab fa-reddit-alien"></i>Reddit</span></a>
-          <a href="https://github.com/" class="nav-item"><span><i class="nav-item-icon fab fa-github"></i>Reddit</span></a>
+          <a href="https://github.com/" class="nav-item"><span><i class="nav-item-icon fab fa-github"></i>github</span></a>
         </div>
       </div>
 
