--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
           <a href="https://zh.go-to-library.sk/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>Z-Library</span></a>
           <a href="https://nic.us.kg/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>us.kg域名</span></a>
           <a href="https://www.spaceship.com/zh/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>spaceship廉价域名</span></a>
-            <a href="https://freedomain.one/" class="nav-item"><span><i class="nav-item-icon fas fa-godaddy"></i>freedomain域名</span></a>
+            <a href="https://freedomain.one/" class="nav-item"><span><i class="nav-item-icon fas fa-square-root-alt"></i>freedomain域名</span></a>
         </div>
       </div>
 
