--- a/图标旋转.html
+++ b/图标旋转.html
@@ -366,14 +366,16 @@
     
     <div class="categories-container">
       <div class="category">
-        <h2 class="category-title">搜索引擎</h2>
+        <h2 class="category-title">Ai搜索</h2>
         <div class="nav-grid">
           <a href="https://www.google.com" class="nav-item"><span><i class="nav-item-icon fas fa-search"></i>Google</span></a>
           <a href="https://www.bing.com" class="nav-item"><span><i class="nav-item-icon fas fa-search"></i>Bing</span></a>
-          <a href="https://www.baidu.com" class="nav-item"><span><i class="nav-item-icon fas fa-paw"></i>百度</span></a>
-          <a href="https://duckduckgo.com" class="nav-item"><span><i class="nav-item-icon fas fa-duck"></i>DuckDuckGo</span></a>
-          <a href="https://www.ecosia.org" class="nav-item"><span><i class="nav-item-icon fas fa-tree"></i>Ecosia</span></a>
-          <a href="https://yandex.com" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>Yandex</span></a>
+          <a href="https://websim.ai/" class="nav-item"><span><i class="nav-item-icon fas fa-paw"></i>websim</span></a>
+          <a href="https://chatgpt.com/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>chatgpt</span></a>
+          <a href="https://www.doubao.com/chat/" class="nav-item"><span><i class="nav-item-icon fas fa-tree"></i>傻豆包</span></a>
+          <a href="https://yuanbao.tencent.com" class="nav-item"><span><i class="nav-item-icon fas fa-globe"></i>傻元宝</span></a>
+          <a href="https://poe.com/" class="nav-item"><span><i class="nav-item-icon fas fa-tree"></i>poe</span></a>
+          <a href="https://claude.ai/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>claude</span></a>
         </div>
       </div>
 
@@ -386,6 +388,7 @@
           <a href="https://www.linkedin.com" class="nav-item"><span><i class="nav-item-icon fab fa-linkedin-in"></i>LinkedIn</span></a>
           <a href="https://www.tiktok.com" class="nav-item"><span><i class="nav-item-icon fab fa-tiktok"></i>TikTok</span></a>
           <a href="https://www.reddit.com" class="nav-item"><span><i class="nav-item-icon fab fa-reddit-alien"></i>Reddit</span></a>
+          <a href="https://github.com/" class="nav-item"><span><i class="nav-item-icon fab fa-github"></i>github</span></a>
         </div>
       </div>
 
@@ -393,11 +396,22 @@
         <h2 class="category-title">实用工具</h2>
         <div class="nav-grid">
           <a href="https://translate.google.com" class="nav-item"><span><i class="nav-item-icon fas fa-language"></i>Google翻译</span></a>
-          <a href="https://www.wolframalpha.com" class="nav-item"><span><i class="nav-item-icon fas fa-square-root-alt"></i>Wolfram Alpha</span></a>
-          <a href="https://www.calculator.net" class="nav-item"><span><i class="nav-item-icon fas fa-calculator"></i>在线计算器</span></a>
-          <a href="https://www.speedtest.net" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>网速测试</span></a>
-          <a href="https://www.timeanddate.com" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>时间日期</span></a>
-          <a href="https://www.wikihow.com" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>WikiHow</span></a>
+          <a href="https://d.186404.xyz/" class="nav-item"><span><i class="nav-item-icon fas fa-square-root-alt"></i><短链</span></a>
+          <a href="https://dynv6.com/" class="nav-item"><span><i class="nav-item-icon fas fa-calculator"></i>dynv6</span></a>
+          <a href="https://fast.com/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>网速测试</span></a>
+          <a href="https://www.cloudns.net/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>cloudns</span></a>
+          <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>cloudflare</span></a>
+          <a href="https://ygpy.net/" class="nav-item"><span><i class="nav-item-icon fas fa-square-root-alt"></i><一个朋友</span></a>
+          <a href="https://notebooklm.google/" class="nav-item"><span><i class"nav-item-icon fas fa-calculator"></i>谷歌笔记</span></a>
+          <a href="https://email.ml/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>临时邮箱</span></a>
+          <a href="https://www.ahhhhfs.com/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>ahhhhfs</span></a>
+          <a href="https://ip.sb/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>ip查询</span></a>
+          <a hr="https://img.186404.xyz/" class="nav-item"><span><i class="nav-item-icon fas fa-tachometer-alt"></i>图床</span></a>
+          <a href="https://www.site.ac/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>site域名转发</span></a>
+          <a href="https://zh.go-to-library.sk/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>Z-Library</span></a>
+          <a href="https://nic.us.kg/" class="nav-item"><span><i class="nav-item-icon fas fa-book-open"></i>us.kg域名</span></a>
+          <a href="https://www.spaceship.com/zh/" class="nav-item"><span><i class="nav-item-icon fas fa-clock"></i>spaceship廉价域名</span></a>
+            <a href="https://freedomain.one/" class="nav-item"><span><i class="nav-item-icon fas fa-square-root-alt"></i>freedomain域名</span></a>
         </div>
       </div>
 
@@ -410,6 +424,8 @@
           <a href="https://arstechnica.com" class="nav-item"><span><i class="nav-item-icon fas fa-flask"></i>Ars Technica</span></a>
           <a href="https://www.engadget.com" class="nav-item"><span><i class="nav-item-icon fas fa-gamepad"></i>Engadget</span></a>
           <a href="https://techradar.com" class="nav-item"><span><i class="nav-item-icon fas fa-satellite-dish"></i>TechRadar</span></a>
+          <a href="https://b.186404.xyz/" class="nav-item"><span><i class="nav-item-icon fas fa-microchip"></i>科技博客</span></a>
+          <a href="https://www.cnbeta.com.tw/" class="nav-item"><span><i class="nav-item-icon fas fa-plug"></i>cnbeta</span></a>
         </div>
       </div>
 
